tests/compile-fail/integration__integration__anm_consts__meta_sprite_id_type_error.snap
---
source: tests/integration/anm_consts.rs
expression: stderr
---
error: type error
   ┌─ <input>:30:62
   │
30 │         coolSprite: {x: 0.0, y: 0.0, w: 512.0, h: 480.0, id: 3.5},
   │                                                              ^^^ a float
   │
   = an integer is required


